--- a/app.json
+++ b/app.json
@@ -17,7 +17,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      //"buildNumber" : "1.0.0",
+      //"bundleIndentifier" : "co.spartagun.myhoneytip"
+      //"config" : {
+        //"googleMobileAdsAppId" : 
+      }
+
     },
     "android": {
       "adaptiveIcon": {
