--- a/app.json
+++ b/app.json
@@ -1,38 +1,40 @@
 {
   "expo": {
-    "name": "wegram",
-    "slug": "wegram",
+    "name": "wegram-hyokyun",
+    "slug": "wegram-hyokyun",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      //"buildNumber" : "1.0.0",
-      //"bundleIndentifier" : "co.spartagun.myhoneytip"
-      //"config" : {
-        //"googleMobileAdsAppId" : 
-      }
-
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    "image": "./assets/splash.png",
+    "resizeMode": "contain",
+    "backgroundColor": "#ffffff"
+  },
+  "updates": {
+    "fallbackToCacheTimeout": 0
+  },
+  "assetBundlePatterns": [
+    "**/*"
+  ],
+  "web": {
+    "favicon": "./assets/favicon.png"
+  },
+  "ios": {
+    "supportsTablet": true,
+    "buildNumber": "1.0.0",
+    "bundleIdentifier": "com.wegram.hyokyun",
+    "config": {
+    "googleMobileAdsAppId": "ca-app-pub-2521868996473895~6590059892"
   }
-}
+  },
+  "android": {
+    "package": "com.wegram.hyokyun",
+    "versionCode": 1,
+    "permissions": ["ACCESS_FINE_LOCATION", "ACCESS_COARSE_LOCATION"],
+    "config": {
+    "googleMobileAdsAppId": "ca-app-pub-2521868996473895~4424907464"
+  }
+  }
+  }
+  }
+  
