--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
+    "expo-ads-admob": "~8.4.0",
     "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
